# foamPostProcessing

./: .gitignore  README.md  pyproject.toml
src/foamPostProcessing/: __init__.py  fieldAverage.py
