[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "foamPostProcessing"
authors = [
  { name="Lucas Merckelbach", email="lucas.merckelbach@hereon.de" },
]
description = "Module with routines for postprocessing OpenFOAM output"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
		"numpy"]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/smerckel/foamPostprocessing"
Issues = "https://github.com/smerckel/foamPostProcessing/issues"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
version = {attr = "foamPostProcessing.__version__"}


